# Job-Seeker

./: .gitignore  AGENTS.md  App_Overview.md  CLAUDE.md  Casey_Hsu_Resume_Baseline.docx  PLAN.md  PROJECT_ARCHITECTURE.md  README.md  Resume_Tailoring_Instructions.md  agent-instructions.md  base-resume.json  cli.js  package-lock.json  package.json  plan.md  pyproject.toml
data/: applications.db-shm  applications.db-wal  base-resume.json  companies.json  config.json
kb/: README.md
kb/policies/: tailoring-rules.md
kb/profile/: education.md  (+4 more)
migrations/: 0001_init.sql  0002_apply_tracking.sql  0003_outcomes.sql  0004_slug_probes.sql
scripts/: bench_models.py  verify_seeds.py
src/: analyze.js  autofill.js  companies.js  config.js  convert.js  coverletter.js  digest.js  import-resume.js  render.js  report.js  scan.js  score.js  scrape.js  tailor.js
tests/: conftest.py  test_add_cmd.py  test_apply_cmd.py  test_apply_picks.py  test_apply_pipeline_e2e.py  test_apply_suggest_add.py  test_audit.py  test_autofill_detect.py  test_certs.py  test_config.py  test_config_seed.py  test_cover_retry.py  test_cover_signoff_strip.py  test_cover_validate.py  test_db.py  test_db_writes.py  test_discover_slugs.py  test_gateway_errors.py  test_gta_filter.py  test_ingest_adapters.py  test_manual_ingest.py  test_parse_docx.py  test_profile_map.py  test_query_planner.py  test_redirect_resolve.py  test_render_cover_docx.py  test_render_docx.py  test_score_clamp.py  test_senior_decline_filter.py  test_slug_candidates.py  test_tailor_invariants.py  test_tailor_retry.py  test_url_extract.py
(+99 files in other folders)
